compiler-core/src/type_/tests/snapshots/rakun_core__type___tests__errors__case_tuple_guard_2.snap
---
source: compiler-core/src/type_/tests/errors.rs
expression: "case #(1, 2) { x if x == #(1, 1.0) -> 1 }"
---
error: Type mismatch
  ┌─ /src/one/two.rakun:1:21
  │
1 │ case #(1, 2) { x if x == #(1, 1.0) -> 1 }
  │                     ^^^^^^^^^^^^^^

Expected type:

    #(Int, Int)

Found type:

    #(Int, Float)
