compiler-core/src/type_/tests/snapshots/rakun_core__type___tests__errors__const_multiple_errors_are_local_with_annotation.snap
---
source: compiler-core/src/type_/tests/errors.rs
expression: "const num: String = 7\nconst tpl: String = #(Ok(1), MyInvalidType, 3)\nconst assignment1: String = num\nconst assignment2: String = tpl"
---
----- SOURCE CODE
const num: String = 7
const tpl: String = #(Ok(1), MyInvalidType, 3)
const assignment1: String = num
const assignment2: String = tpl

----- ERROR
error: Type mismatch
  ┌─ /src/one/two.rakun:1:21
  │
1 │ const num: String = 7
  │                     ^

Expected type:

    String

Found type:

    Int

error: Type mismatch
  ┌─ /src/one/two.rakun:2:21
  │
2 │ const tpl: String = #(Ok(1), MyInvalidType, 3)
  │                     ^^^^^^^^^^^^^^^^^^^^^^^^^^

Expected type:

    String

Found type:

    #(Result(Int, a), b, Int)

error: Unknown variable
  ┌─ /src/one/two.rakun:2:30
  │
2 │ const tpl: String = #(Ok(1), MyInvalidType, 3)
  │                              ^^^^^^^^^^^^^

The name `MyInvalidType` is not in scope here.
